tests/corpus/snapshots/counting-loop-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "terminated",
  "steps": 43,
  "d": [
    "$b",
    "$ffff",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0"
  ],
  "a": [
    "$2014",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$101c",
  "flags": "X:0 N:0 Z:0 V:0 C:0",
  "output": "",
  "memory": "ad60bba4f1e66bb0"
}
