tests/corpus/snapshots/factorial-and-fibonacci-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "terminated",
  "steps": 2137,
  "d": [
    "$37",
    "$8",
    "$0",
    "$0",
    "$0",
    "$0",
    "$9d80",
    "$37"
  ],
  "a": [
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$10a0",
  "flags": "X:0 N:0 Z:0 V:0 C:0",
  "output": "",
  "memory": "ed777b5b6f42532e"
}
