tests/corpus/snapshots/graphicSound-errors.snap
---
source: src/test/corpus.rs
expression: diagnostics
---
[
  {
    "severity": "suggestion",
    "code": "bare_comment",
    "message": "this is EASy68K's comment field; s68k reads it as a comment",
    "hint": "start comments with `;` to say so",
    "location": {
      "file": "graphicSound.X68",
      "line": 15,
      "column": 28,
      "endColumn": 41
    },
    "related": []
  },
  {
    "severity": "error",
    "code": "unimplemented_operation",
    "message": "`repeat` is not implemented: structured control is not assembled here",
    "hint": "write a comparison and a branch, `cmp.w #10,d0` then `bge done` instead",
    "location": {
      "file": "graphicSound.X68",
      "line": 159,
      "column": 4,
      "endColumn": 10
    },
    "related": []
  },
  {
    "severity": "error",
    "code": "unimplemented_operation",
    "message": "`until` is not implemented: structured control is not assembled here",
    "hint": "write a comparison and a branch, `cmp.w #10,d0` then `bge done` instead",
    "location": {
      "file": "graphicSound.X68",
      "line": 174,
      "column": 4,
      "endColumn": 9
    },
    "related": []
  }
]
